--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-12.0-testing:
+  - please see subversion log at
+    http://sourceforge.net/p/nzbget/code/log
+
 nzbget-11.0:
   - reworked concept of post-processing scripts:
         - multiple scripts can be assigned to each nzb-file;
