--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-13.0-testing:
+  - please see subversion log at
+    http://sourceforge.net/p/nzbget/code/log
+
 nzbget-12.0:
   - added RSS feeds support:
         - new options "FeedX.Name", "FeedX.URL", "FeedX.Filter",
