--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 
 This is a short documentation. For more information please
 visit NZBGet home page at 
-  http://nzbget.sourceforge.net
+  http://nzbget.net
 
 Contents          
 --------
@@ -531,7 +531,7 @@ libpar2 is distributed under GPL; libsigc++ and GnuTLS - under LGPL.
 
 If you encounter any problem, feel free to use the forum
 
-    nzbget.sourceforge.net/forum
+    nzbget.net/forum
 
 or contact me at
 
