--- a/osx/Resources/Localizable.strings
+++ b/osx/Resources/Localizable.strings
@@ -1,7 +1,7 @@
 ﻿/*
  *  This file is part of nzbget
  *
- *  Copyright (C) 2007-2013 Andrey Prygunkov <hugbug@users.sourceforge.net>
+ *  Copyright (C) 2007-2014 Andrey Prygunkov <hugbug@users.sourceforge.net>
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -62,7 +62,7 @@
 "FactoryResetted.InformativeText"="";
 
 "FactoryReset.MessageText"="Reset to factory defaults?";
-"FactoryReset.InformativeText"="All settings will be reset to defaults. The download queue, history, statstics, log-file, default incoming nzb-directory and default ppscripts-directory will be erased. ";
+"FactoryReset.InformativeText"="All settings will be reset to defaults. The download queue, history, statistics, log-file, default incoming nzb-directory and default scripts-directory will be erased. ";
 "FactoryReset.Cancel"="Cancel";
 "FactoryReset.Reset"="Erase and Reset";
 
