updated version string to 14.0-testing
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1056 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-14.0-testing:
+  - please see subversion log at
+    http://sourceforge.net/p/nzbget/code/HEAD/log/
+
 nzbget-13.0:
   - reworked download queue:
         - new dialog to build filters in web-interface with instant preview;
