updated version string to 15.0-testing
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1157 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-15.0:
+  - please see subversion log at
+    http://sourceforge.net/p/nzbget/code/HEAD/log/?path=/trunk
+
 nzbget-14.0:
   - added article cache:
         - new option "ArticleCache" defines memory limit to use for cache;
