system sleep on idle state is now prevented during download and post-processing (Mac OSX only)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1160 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/osx/Resources/Localizable.strings
+++ b/osx/Resources/Localizable.strings
@@ -31,6 +31,7 @@
 "Status.Left"="%@ left";
 "Status.NoConnection"="Downloader Not Responding";
 "Status.Restarting"="Restarting";
+"Status.PreventSleep"="NZBGet is downloading or post-processing";
 
 "Left.Days"="%i days";
 "Left.Days.Hours"="%id %ih";
