download speed in context menu of menubar icon is now shown in MB/s instead of KB/s (for speeds from 1 MB/s) (Mac OS X only)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1255 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/osx/Resources/Localizable.strings
+++ b/osx/Resources/Localizable.strings
@@ -22,7 +22,9 @@
  *
  */
 
-"Status.Downloading"="Downloading at %i KB/s";
+"Status.DownloadingKB"="Downloading at %i KB/s";
+"Status.DownloadingMB"="Downloading at %1.1f MB/s";
+"Status.DownloadingMB10"="Downloading at %i MB/s";
 "Status.Post-Processing"="Post-Processing";
 "Status.Fetching NZBs"="Fetching NZBs";
 "Status.Fetching Feeds"="Fetching Feeds";
